Handle Begin Overlap

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,6 +13,8 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 
 r.Shadow.Virtual.Enable=1
+r.AntiAliasingMethod=0
+r.DefaultFeature.MotionBlur=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
