--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -43,7 +43,17 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/SnakeGameModeBaseBP.SnakeGameModeBaseBP_C
 EditorStartupMap=/Game/Main.Main
-GameDefaultMap=/Game/Main.Main
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Menu.Menu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/SnakeGameModeBaseBP.SnakeGameModeBaseBP_C
+GlobalDefaultServerGameMode=None
 
