--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6DD66F9F4A95BC6EAD5F4EA9C64865E9
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="I:/Builds")
+
