--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,7 +51,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/GameInstanceBP.GameInstanceBP_C
 GameDefaultMap=/Game/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/SnakeGameModeBaseBP.SnakeGameModeBaseBP_C
